--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+qtimageformats-opensource-src (5.10.1-2) unstable; urgency=medium
+
+  * Release to unstable.
+
+ -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Sat, 07 Apr 2018 16:58:19 -0300
+
 qtimageformats-opensource-src (5.10.1-1) experimental; urgency=medium
 
   * New upstream release.
