--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,7 @@
+qtimageformats-opensource-src (5.11.1-1) UNRELEASED; urgency=medium
+
+ -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 24 Jun 2018 14:30:09 -0500
+
 qtimageformats-opensource-src (5.10.1-2) unstable; urgency=medium
 
   * Release to unstable.
