--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,7 @@ qtimageformats-opensource-src (5.11.1-1) UNRELEASED; urgency=medium
   [ Simon Quigley ]
   * New upstream release.
   * Bump Standards-version to 4.1.4, no changes needed.
+  * Bump build dependencies to 5.11.1.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 24 Jun 2018 14:30:09 -0500
 
