--- a/debian/changelog
+++ b/debian/changelog
@@ -1,12 +1,11 @@
-qtimageformats-opensource-src (5.11.1-1) UNRELEASED; urgency=medium
+qtimageformats-opensource-src (5.11.1-1) experimental; urgency=medium
 
-  [ Simon Quigley ]
   * New upstream release.
   * Bump Standards-version to 4.1.4, no changes needed.
   * Bump build dependencies to 5.11.1.
   * Fix insecure-copyright-format-uri.
 
- -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 24 Jun 2018 14:30:09 -0500
+ -- Simon Quigley <tsimonq2@ubuntu.com>  Sun, 24 Jun 2018 14:36:13 -0500
 
 qtimageformats-opensource-src (5.10.1-2) unstable; urgency=medium
 
