--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,8 @@
+qtimageformats-opensource-src (5.11.2-2) UNRELEASED; urgency=medium
+
+
+ -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Tue, 16 Oct 2018 21:53:07 +0300
+
 qtimageformats-opensource-src (5.11.2-1) experimental; urgency=medium
 
   * New upstream release.
