--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,7 @@
 qtimageformats-opensource-src (5.11.2-2) UNRELEASED; urgency=medium
 
+  [ Dmitry Shachnev ]
+  * Update debian/copyright.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Tue, 16 Oct 2018 21:53:07 +0300
 
