--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-qtimageformats-opensource-src (5.11.2-2) UNRELEASED; urgency=medium
+qtimageformats-opensource-src (5.11.2-2) unstable; urgency=medium
 
-  [ Dmitry Shachnev ]
   * Update debian/copyright.
+  * Upload to unstable.
 
- -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Tue, 16 Oct 2018 21:53:07 +0300
+ -- Dmitry Shachnev <mitya57@debian.org>  Tue, 16 Oct 2018 21:53:53 +0300
 
 qtimageformats-opensource-src (5.11.2-1) experimental; urgency=medium
 
