--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,7 @@
+qtimageformats-opensource-src (5.11.2-3) UNRELEASED; urgency=medium
+
+ -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 09 Dec 2018 15:59:52 -0300
+
 qtimageformats-opensource-src (5.11.2-2) unstable; urgency=medium
 
   * Update debian/copyright.
