--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,8 @@
-qtimageformats-opensource-src (5.11.2-3) UNRELEASED; urgency=medium
+qtimageformats-opensource-src (5.11.3-1) UNRELEASED; urgency=medium
+
+  [ Lisandro Damián Nicanor Pérez Meyer ]
+  * New upstream release.
+    - Bump Qt build dependencies.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 09 Dec 2018 15:59:52 -0300
 
