--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,7 @@
+qtimageformats-opensource-src (5.11.3-2) UNRELEASED; urgency=medium
+
+ -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Thu, 13 Dec 2018 19:02:38 -0300
+
 qtimageformats-opensource-src (5.11.3-1) experimental; urgency=medium
 
   * New upstream release.
