--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,9 @@ qtimageformats-opensource-src (5.11.3-2) UNRELEASED; urgency=medium
   * Note that the previous upload fixes CVE-2018-19871: QImage: QTgaFile CPU
     exhaustion.
 
+  [ Simon Quigley ]
+  * Change my email to tsimonq2@debian.org now that I am a Debian Developer.
+
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Thu, 13 Dec 2018 19:02:38 -0300
 
 qtimageformats-opensource-src (5.11.3-1) experimental; urgency=medium
