--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,7 @@ qtimageformats-opensource-src (5.11.3-2) UNRELEASED; urgency=medium
 
   [ Simon Quigley ]
   * Change my email to tsimonq2@debian.org now that I am a Debian Developer.
+  * Bump Standards-version to 4.3.0, no changes needed.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Thu, 13 Dec 2018 19:02:38 -0300
 
