--- a/debian/changelog
+++ b/debian/changelog
@@ -1,14 +1,15 @@
-qtimageformats-opensource-src (5.11.3-2) UNRELEASED; urgency=medium
+qtimageformats-opensource-src (5.11.3-2) unstable; urgency=medium
 
   [ Lisandro Damián Nicanor Pérez Meyer ]
   * Note that the previous upload fixes CVE-2018-19871: QImage: QTgaFile CPU
     exhaustion.
+  * Upload to unstable.
 
   [ Simon Quigley ]
   * Change my email to tsimonq2@debian.org now that I am a Debian Developer.
   * Bump Standards-version to 4.3.0, no changes needed.
 
- -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Thu, 13 Dec 2018 19:02:38 -0300
+ -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Wed, 26 Dec 2018 16:14:59 -0300
 
 qtimageformats-opensource-src (5.11.3-1) experimental; urgency=medium
 
